--- a/Farmacologia/style2.css
+++ b/Farmacologia/style2.css
@@ -13,6 +13,10 @@ h2 {
     color: black;
 }
 
+h5{
+    color: black;
+    font-weight: bold;
+}
 .salud-digital-title {
     margin-top: 200px;
     margin-bottom: 3rem;
@@ -208,20 +212,38 @@ h2 {
 .hero_cta{
     text-decoration: none;   
 }
-.modal_container1{
-    width: 90%;
+
+.modal_container1 {
+    width: 90%; /* Ancho relativo para adaptabilidad */
+    max-width: 1200px; /* Límite máximo de ancho */
+    height: auto; /* Altura ajustable al contenido */
+    min-height: 500px; /* Altura mínima para mantener tamaño consistente */
+    max-height: 80vh; /* Altura máxima basada en el tamaño de la pantalla*/
     background-color: #ffffff;
     margin: auto;
-    max-width: 1920px;
-    max-height: 100%;
-    border-radius: 20px;
-    padding: 3em, 2.5em;
-    gap: 1em;
-    place-items: center;
-    grid-auto-columns: 100%;
-    transform: var(--transform);
-    transition:var(--transition);
+    border-radius: 20px; /* Bordes redondeados */
+    padding: 2.5em; /* Espaciado interno consistente */
+    gap: 1em; /* Espaciado entre elementos */
+    transform: var(--transform); /* Transición visual */
+    transition: var(--transition); /* Transiciones suaves */
+    overflow-y: auto; /* Scroll si el contenido es mayor que el contenedor */
+}
 
+/* Media Queries para dispositivos pequeños */
+@media (max-width: 768px) {
+    .modal_container1 {
+        width: 95%; /* Ancho más amplio en dispositivos pequeños */
+        padding: 2em; /* Reduce el padding en dispositivos pequeños */
+    }
+}
+
+/* Media Queries para dispositivos muy pequeños */
+@media (max-width: 576px) {
+    .modal_container1 {
+        width: 100%; /* Ocupar todo el ancho */
+        padding: 1.5em; /* Reduce el padding aún más */
+        max-width: 100%; /* Desactiva la limitación de ancho */
+    }
 }
  
 .modal_title1{
