--- a/css/condiciones.css
+++ b/css/condiciones.css
@@ -18,6 +18,14 @@ body {
     margin-bottom: 3rem;
 } */
 
+
+.pills-img {
+    background-color: #fff;
+    border: solid 1px rgba(128, 128, 128, 0.653);
+    border-radius: 14%;
+
+}
+
 .container-fluid {
     width: 100%;
     padding: 0;
