--- a/css/condiciones.css
+++ b/css/condiciones.css
@@ -10,6 +10,7 @@ body {
     min-height: 100vh;
     margin: 0;
     background-color: #f9f9f9;
+    transition: 0.5s ease;
 }
 
 /* .content {
@@ -22,8 +23,27 @@ body {
 .pills-img {
     background-color: #fff;
     border: solid 1px rgba(128, 128, 128, 0.653);
-    border-radius: 14%;
+    border-radius: 50px;
+    transition: 0.5s ease;
+}
 
+.pills-img:hover, .pills-txt:hover {
+    -webkit-transform: scale(1.02);
+    -ms-transform: scale(1.02);
+    transform: scale(1.02);
+    transition: 0.5s ease;
+    font-size: 1.7vh;
+}
+
+.pills-txt {
+    background-color: #fff;
+    border: solid 1px rgba(128, 128, 128, 0.653);
+    border-radius: 50px;
+    color: #5d5c5c;
+    text-align: center;
+    padding: 5%;
+    font-size: 1.5vh;
+    transition: 0.5s ease;
 }
 
 .container-fluid {
@@ -35,3 +55,119 @@ body {
 footer {
     padding: 10px;
 }
+
+/* Seccion dinamica */
+
+.btn-group .btn {
+    font-weight: bold;
+}
+  
+.active {
+    background-color: #d4edda;
+    color: #155724;
+    border-color: #c3e6cb;
+}
+  
+img {
+    width: 60%;
+    border-radius: 20px;
+}
+
+/* BOTONES */
+
+/* #region Leve */
+.btn-custom-leve {
+    color: forestgreen; /* Color del texto */
+    background-color: #fff; /* Color de fondo */
+    border: 1px solid forestgreen; /* Borde */
+    transition: background-color .5s, color .5s, box-shadow .5s;
+}
+
+.btn-custom-leve:hover {
+    color: #ffffff;
+    background-color: forestgreen;
+    border-color: forestgreen;
+}
+
+.btn-custom-leve:active,
+.btn-custom-leve.active {
+    color: #ffffff;
+    background-color: forestgreen;
+    border-color: forestgreen;
+    box-shadow: none; /* Elimina sombras */
+    outline: none; /* Evita resaltado predeterminado */
+}
+/* #endregion */
+
+/* #region Moderado */
+.btn-custom-moderado {
+    color: orange; /* Color del texto */
+    background-color: #fff; /* Color de fondo */
+    border: 1px solid orange; /* Borde */
+    transition: background-color .5s, color .5s, box-shadow .5s;
+}
+
+.btn-custom-moderado:hover {
+    color: #ffffff;
+    background-color: orange;
+    border-color: orange;
+}
+
+.btn-custom-moderado:active,
+.btn-custom-moderado.active {
+    color: #ffffff;
+    background-color: orange;
+    border-color: orange;
+    box-shadow: none; /* Elimina sombras */
+    outline: none; /* Evita resaltado predeterminado */
+}
+/* #endregion */
+
+/* #region Severo */
+.btn-custom-severo {
+    color: red; /* Color del texto */
+    background-color: #fff; /* Color de fondo */
+    border: 1px solid red;
+    transition: background-color .5s, color .5s, box-shadow .5s;
+}
+
+.btn-custom-severo:hover {
+    color: #ffffff;
+    background-color: red;
+    border-color: red;
+}
+
+.btn-custom-severo:active,
+.btn-custom-severo.active {
+    color: #ffffff;
+    background-color: red;
+    border-color: red;
+    box-shadow: none; /* Elimina sombras */
+    outline: none; /* Evita resaltado predeterminado */
+}
+/* #endregion */
+
+/* #region muySevero */
+.btn-custom-muysevero {
+    color: #56070c; /* Color del texto */
+    background-color: #fff; /* Color de fondo */
+    border: 1px solid #56070c; /* Borde */
+    transition: background-color .5s, color .5s, box-shadow .5s;
+}
+
+.btn-custom-muysevero:hover {
+    color: #ffffff;
+    background-color: #56070c;
+    border-color: #56070c;
+}
+
+.btn-custom-muysevero:active,
+.btn-custom-muysevero.active {
+    color: #ffffff;
+    background-color: #56070c;
+    border-color: #56070c;
+    box-shadow: none; /* Elimina sombras */
+    outline: none; /* Evita resaltado predeterminado */
+}
+
+/* #endregion */
