--- a/css/style.css
+++ b/css/style.css
@@ -186,3 +186,39 @@ footer a:hover {
 
 
 /* #endregion */
+
+
+
+
+/* SECCION DE VIDEOS*/
+@media (max-width: 769px) {
+    .cont-videos{
+        padding: 1rem;
+    }
+    .text-salud h1 {
+        font-size: 1.5rem;
+    }
+    .text-salud p {
+        font-size: 0.85rem;
+    }
+    .div-video {
+        width: 90%;
+        padding: 5px;
+        margin-top: 10px;
+    }
+    .salud-imagen {
+         margin-top: 0px;
+    }
+
+    /* IMG-SMENTAL*/
+    .img-smental {
+       width: 400px; 
+    }
+}
+
+
+/* COORDINACION */
+.btn-custom-padding {
+    padding-left: 20px;
+    padding-right: 20px;
+}
