POP UP DINAMICO TERMINADO
Generación dinamica de medicamentos y modales terminados (Farmacologia2)

--- a/Farmacologia/style2.css
+++ b/Farmacologia/style2.css
@@ -215,66 +215,9 @@ summary{
 }
 
 
-.modal2{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #525050bd;
-    display: flex;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity .6s .9s;
-    --transform: translateY(-100vh);
-    --transition: transform .8s;
-
-}
 
 
-.modal2--show{
-    /*clase modificadora*/
-    opacity: 1;
-    pointer-events:  unset;
-    transition: opacity .6s;
-    --transform: translateY(0);
-    --transition: transform .6s .6s;
-
-
-}
-
-
-.modal3{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #525050bd;
-    display: flex;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity .6s .9s;
-    --transform: translateY(-100vh);
-    --transition: transform .8s;
-
-}
-
-
-.modal3--show{
-    /*clase modificadora*/
-    opacity: 1;
-    pointer-events:  unset;
-    transition: opacity .6s;
-    --transform: translateY(0);
-    --transition: transform .6s .6s;
-
-
-}
-
-
-
-.hero_cta1, .hero_cta2, .hero_cta3 {
+.botonModal{
     text-decoration: none;   
 }
 
