--- a/css/noticias.css
+++ b/css/noticias.css
@@ -13,7 +13,7 @@
 
 .content {
     /* flex: 1; */
-    margin-top: 250px;
+    margin-top: 150px;
     margin-bottom: 3rem;
 }
 
@@ -93,7 +93,7 @@ footer {
     max-height: 80vh; /* Altura máxima basada en el tamaño de la pantalla */
     background-color: #ffffff;
     margin: auto;
-    border-radius: 50px; /* Bordes redondeados */
+    border-radius: 10px; /* Bordes redondeados */
     gap: 1em; /* Espaciado entre elementos */
     transform: var(--transform); /* Transición visual */
     transition: var(--transition); /* Transiciones suaves */
@@ -217,7 +217,7 @@ footer {
 
 .modal-descr {
     margin-left: 20px;
-    font-size: 1.5vh;
+    font-size: 1.7vh;
     color: #000;
     text-align: justify;
 }
@@ -245,6 +245,15 @@ footer {
     width: 100%;
     height: 350px; /* Altura fija, ajusta según el diseño */
     margin-bottom: 20px;
+}
+
+.modal-enlace {
+    margin-left: 20px;
+    font-size: 1.5vh;
+    color: #414BB2;
+    text-align: center;
+    font-weight: 600;
+    border: 1px solid #000;
 }
 
 /* #endregion */
