Modal Func.  en serviciosBio

--- a/css/style.css
+++ b/css/style.css
@@ -186,3 +186,12 @@ footer a:hover {
 
 
 /* #endregion */
+
+/* #region servicios*/
+
+.expanded-content {
+    display: none;
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
+}
+/* #endregion */
