--- a/css/style.css
+++ b/css/style.css
@@ -495,3 +495,71 @@ footer a:hover {
 .eje-trabajo-list li:hover {
     background-color: #e9ecef; /* Cambia el fondo al pasar el cursor */
 }
+
+/* AREA DE QUIENES SOMOS*/
+/* Banner principal */
+.banner-area {
+    background-image: url('../img/quienesSomos2.jpg'); /* Cambia la ruta si es necesario */
+    background-size: cover;
+    background-position: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 45vh;
+    transition: transform 0.5s ease-in-out; /* Animación suave */
+    z-index: 800;
+    transform: translateY(0); /* Posición inicial (visible) */
+}
+
+/* Clase para ocultar el banner */
+.banner-area.hidden {
+    transform: translateY(-100%); /* Mueve el banner fuera de la pantalla */
+}
+
+/* Efecto de superposición */
+.banner-area:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #130f40;
+    opacity: 0.7;
+    z-index: -1;
+}
+
+/* Título dentro del banner */
+.banner-area h2 {
+    position: relative;
+    margin: 0;
+    padding-top: 12%;
+    font-size: 80px;
+    color: #fff;
+    text-align: center;
+}
+
+/* Ajustes para dispositivos móviles */
+@media (max-width: 768px) {
+    .banner-area h2 {
+        padding-top: 40%; /* Incrementa el espacio superior */
+        font-size: 90px; /* Reduce el tamaño de fuente */
+    }
+}
+
+@media (max-width: 576px) {
+    .banner-area h2 {
+
+        padding-top: 35%; /* Incrementa aún más el espacio superior */
+        font-size: 70px; /* Ajusta el tamaño de fuente para pantallas muy pequeñas */
+    }
+}
+
+.redes{
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    gap: 10px; 
+    padding-bottom: 5px;
+    margin-left: -100px;
+}
