--- a/css/serviciosBio.css
+++ b/css/serviciosBio.css
@@ -235,9 +235,9 @@ footer a:hover {
 .modal_container1 {
     width: 80%; /* Ancho relativo para adaptabilidad */
     max-width: 1200px; /* Límite máximo de ancho */
-    height: auto; /* Altura ajustable al contenido */
+    height: 1000vh; /* Altura ajustable al contenido */
     min-height: 700px; /* Altura mínima para mantener tamaño consistente */
-    max-height: 1000vh; /* Altura máxima basada en el tamaño de la pantalla */
+    max-height: 80vh; /* Altura máxima basada en el tamaño de la pantalla */
     background-color: #ffffff;
     margin: auto;
     border-radius: 10px; /* Bordes redondeados */
@@ -390,7 +390,8 @@ footer a:hover {
 .modal_header {
     position: relative;
     width: 100%;
-    height: 350px; /* Altura fija, ajusta según el diseño */
+    height: 350px;
+    /* height: 350px; */
     margin-bottom: 20px;
 }
 
@@ -401,6 +402,17 @@ footer a:hover {
     text-align: center;
     font-weight: 600;
     border: 1px solid #000;
+}
+
+.card {
+    transition: 0.5s ease;
+}
+
+.card:hover {
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+    transition: 0.5s ease;
 }
 
 /* #endregion */
