--- a/css/condiciones.css
+++ b/css/condiciones.css
@@ -45,7 +45,7 @@ body {
     border: solid 1px rgba(128, 128, 128, 0.653);
     border-radius: 50px;
     color: #5d5c5c;
-    text-align: justify;
+    /* text-align: justify; */
     padding: 5%;
     font-size: 1.7vh;
     transition: 0.5s ease;
@@ -87,6 +87,9 @@ img {
     border: 1px solid forestgreen; /* Borde */
     transition: background-color .5s, color .5s, box-shadow .5s;
     font-size: 2vh;
+    /* padding-left: 20px;
+    padding-right: 20px; */
+    padding: 5px 20px 5px 20px;
 }
 
 .btn-custom-leve:hover {
@@ -244,7 +247,7 @@ img {
 
 
 .tachado {
-    text-decoration: line-through;
+    /* text-decoration: line-through; */
     color: #000;
     font-weight: bold;
 }
