--- a/css/style.css
+++ b/css/style.css
@@ -195,3 +195,10 @@ footer a:hover {
     transition: all 0.3s ease-in-out;
 }
 /* #endregion */
+
+
+/* TELEMEDICINA */
+
+.descr-telemed {
+    font-size: 1.1rem;;
+}
